--- a/en_US/data_integration/s3.md
+++ b/en_US/data_integration/s3.md
@@ -43,15 +43,11 @@ This section introduces the preparations required before creating an Amazon S3 S
 - Understand [data integration](./introduction.md).
 
 ### Network settings
-- Enable `NAT Gateway`: Since EMQX accesses Amazon S3 through public network, you need to enable [NAT Gateway](https://docs.emqx.com/en/cloud/latest/vas/nat-gateway.html) in your deployment. You can select the NAT Gateway card in the top menu bar - `VAS` or select Enable NAT Gateway service in the bottom tab bar of the Deployment Overview.
+Since EMQX accesses Amazon S3 through public network, you need to enable [NAT Gateway](../vas/nat-gateway.md) in your deployment. Click **VAS** from the top menu bar and select the NAT Gateway card, or you can select **Enable NAT Gateway service** in the bottom tab bar of the Deployment Overview page.
 
 ### Prepare an S3 Bucket
 
-EMQX Platform supports Amazon S3 and other S3-compatible storage services. You can use AWS cloud services or deploy a MinIO instance with Docker.
-
-:::: tabs
-
-::: tab Amazon S3
+EMQX Platform supports Amazon S3 and other S3-compatible storage services. Here you can use AWS cloud services to create an S3 bucket.
 
 1. In the [AWS S3 Console](https://console.amazonaws.cn/s3/home), click the **Create bucket** button. Follow the instructions to enter the relevant information, such as bucket name and region, to create an S3 bucket. For detailed operations, refer to the [AWS Documentation](https://docs.amazonaws.cn/AmazonS3/latest/userguide/creating-bucket.html).
 2. Set bucket permissions. After the bucket is created successfully, select the bucket and click the **Permissions** tab. Based on your needs, you can set the bucket to public read/write, private, or other permissions.Setting bucket access can be referenced in the following JSON:
@@ -92,25 +88,17 @@ EMQX Platform supports Amazon S3 and other S3-compatible storage services. You c
 
 With the Amazon S3 bucket created and configured, you are now ready to create an Amazon S3 Sink in EMQX Platform.
 
-:::
-
-::::
-
 ## Create a Connector
 
 Before creating data integration rules, you need to create the corresponding connector.
 
 1. If it is the first time for you to create a connector, select **Amazon S3** under the **Data Persistence** category. If you have already created connectors, select **New Connector** and then select **Amazon S3** under the **Data Persistence** category.
-
 2. **Connector Name**: The system will automatically generate a connector name.
-
 3. Enter the connection information:
-   - If you are using the Amazon S3 bucket, enter the following information:
-     - **Host**: The host varies by region and is formatted as `s3.{region}.amazonaws.com`.
-     - **Port**: Enter `443`.
-     - **Access Key ID** and **Secret Access Key**: Enter the access keys created in AWS.
-     - You need to click `Enable TLS` and turn off `TLS Verify`.
-
+   - **Host**: The host varies by region and is formatted as `s3.{region}.amazonaws.com`.
+   - **Port**: Enter `443`.
+   - **Access Key ID** and **Secret Access Key**: Enter the access keys created in AWS.
+   - You need to click **Enable TLS** and turn off **TLS Verify**.
 4. Click the **Test** button. If the Amazon S3 service is accessible, a success prompt will be returned.
 5. Click the **New** button to complete the creation.
 
@@ -137,7 +125,7 @@ This section demonstrates how to create a rule in EMQX Platform to process messa
 
    :::
 
-3. Click **Next** to add an action.
+3. Click **Next** to add an action that contains the Amazon S3 Sink.
 
 4. Select the connector you just created from the **Connector** dropdown box.
 
@@ -213,17 +201,9 @@ mqttx pub -i EMQX Platform_c -t t/1 -m '{ "msg": "hello S3" }'
 
 After sending a few messages, access the MinIO console or Amazon S3 console to see the result.
 
-:::: tabs
-
-::: tab Amazon S3 console
-
 Log in to the AWS Management Console and open the Amazon S3 console: <https://console.aws.amazon.com/s3/>.
 
 In the bucket list, select the bucket `emqx-cloud-s3-connector-test` to enter the bucket. You can see in the object list that the message just published has been successfully written into the `msg` object. Select the checkbox next to the object, then choose **Download** to download the object to your local machine for viewing.
-
-:::
-
-::::
 
 ## Advanced Settings
 
