fix(s3): add doc path & format content

--- a/en_US/data_integration/s3.md
+++ b/en_US/data_integration/s3.md
@@ -8,7 +8,7 @@ This page provides a detailed introduction to the data integration between EMQX 
 
 Amazon S3 data integration in EMQX Platform is a ready-to-use feature that can be easily configured for complex business development. In a typical IoT application, EMQX Platform acts as the IoT platform responsible for device connectivity and message transmission, while Amazon S3 serves as the data storage platform, handling message data storage.
 
-![EMQX Platform-integration-s3](./_assets/EMQX%20Platform-integration-s3.jpg)
+![EMQX Platform-integration-s3](./_assets/data-integration-s3.jpg)
 
 EMQX Platform utilizes rules and Sinks to forward device events and data to Amazon S3. Applications can read data from Amazon S3 for further data applications. The specific workflow is as follows:
 
@@ -43,6 +43,7 @@ This section introduces the preparations required before creating an Amazon S3 S
 - Understand [data integration](./introduction.md).
 
 ### Network settings
+
 Since EMQX accesses Amazon S3 through public network, you need to enable [NAT Gateway](../vas/nat-gateway.md) in your deployment. Click **VAS** from the top menu bar and select the NAT Gateway card, or you can select **Enable NAT Gateway service** in the bottom tab bar of the Deployment Overview page.
 
 ### Prepare an S3 Bucket
@@ -51,39 +52,32 @@ EMQX Platform supports Amazon S3 and other S3-compatible storage services. Here 
 
 1. In the [AWS S3 Console](https://console.amazonaws.cn/s3/home), click the **Create bucket** button. Follow the instructions to enter the relevant information, such as bucket name and region, to create an S3 bucket. For detailed operations, refer to the [AWS Documentation](https://docs.amazonaws.cn/AmazonS3/latest/userguide/creating-bucket.html).
 2. Set bucket permissions. After the bucket is created successfully, select the bucket and click the **Permissions** tab. Based on your needs, you can set the bucket to public read/write, private, or other permissions.Setting bucket access can be referenced in the following JSON:
-```json
-{
-"Version": "2012-10-17",
-"Statement": [
-{
-"Sid": "Stmt1ListBucket",
-"Effect": "Allow",
-"Action": [
-"s3:ListBucket"
-],
-"Resource": [
-"arn:aws:s3:::emqx-cloud-s3-connector-test"
-]
-},
-{
-"Sid": "Stmt2GetAndPutObject",
-"Effect": "Allow",
-"Action": [
-"s3:GetObject",
-"s3:PutObject"
-],
-"Resource": [
-"arn:aws:s3:::emqx-cloud-s3-connector-test/*"
-]
-},
-{
-"Effect": "Allow",
-"Action": "s3:ListAllMyBuckets",
-"Resource": "*"
-}
-]
-}
-```
+
+   ```json
+   {
+    "Version": "2012-10-17",
+    "Statement": [
+      {
+        "Sid": "Stmt1ListBucket",
+        "Effect": "Allow",
+        "Action": ["s3:ListBucket"],
+        "Resource": ["arn:aws:s3:::emqx-cloud-s3-connector-test"]
+      },
+      {
+        "Sid": "Stmt2GetAndPutObject",
+        "Effect": "Allow",
+        "Action": ["s3:GetObject", "s3:PutObject"],
+        "Resource": ["arn:aws:s3:::emqx-cloud-s3-connector-test/*"]
+      },
+      {
+        "Effect": "Allow",
+        "Action": "s3:ListAllMyBuckets",
+        "Resource": "*"
+      }
+    ]
+   }
+   ```
+
 3. Obtain access keys. In the AWS Console, search for and select the **IAM** service. Create a new user for S3 and obtain the Access Key and Secret Key.
 
 With the Amazon S3 bucket created and configured, you are now ready to create an Amazon S3 Sink in EMQX Platform.
@@ -175,17 +169,16 @@ This section demonstrates how to create a rule in EMQX Platform to process messa
    - **Max Records**: When the maximum number of records is reached, the aggregation of a single file will be completed and uploaded, resetting the time interval.
 
    - **Time Interval**: When the time interval is reached, even if the maximum number of records has not been reached, the aggregation of a single file will be completed and uploaded, resetting the maximum number of records.
-   - **Min Part Size**： The minimum chunk size for part uploads after aggregation is complete. The data to be uploaded will accumulate in memory until it reaches this size. 
-   - **Max Part Size**： The maximum chunk size for part uploads. The S3 Sink will not attempt to upload parts exceeding this size. 
+   - **Min Part Size**： The minimum chunk size for part uploads after aggregation is complete. The data to be uploaded will accumulate in memory until it reaches this size.
+   - **Max Part Size**： The maximum chunk size for part uploads. The S3 Sink will not attempt to upload parts exceeding this size.
 
-   ::: 
+   :::
 
    ::::
 
+8. Expand **Advanced Settings** and configure the advanced setting options as needed (optional). For more details, refer to [Advanced Settings](#advanced-settings).
 
-8.  Expand **Advanced Settings** and configure the advanced setting options as needed (optional). For more details, refer to [Advanced Settings](#advanced-settings).
-
-9.  Click the **Confirm** button to complete the rule creation.
+9. Click the **Confirm** button to complete the rule creation.
 
 10. In the **Successful new rule** pop-up, click **Back to Rules**, thus completing the entire data integration configuration chain.
 
