--- a/en_US/gateway/jt808.md
+++ b/en_US/gateway/jt808.md
@@ -71,7 +71,7 @@ After completing these steps, you can see the connected client in the JT/T 808 g
 
 ## Configure Access Authentication/Authorization
 
-For detailed configuration, refer to [Access Authentication/Authorization](https://docs.emqx.com/zh/emqx/latest/gateway/jt808.html#配置接入认证-鉴权). Users should complete the authentication configuration according to the requirements of the IoV terminal.
+For detailed configuration, refer to [Configure Client Authentication/Authorization](https://docs.emqx.com/en/emqx/latest/gateway/jt808.html#configure-client-authentication-authorization). Users should complete the authentication configuration according to the requirements of the IoV terminal.
 
 ## Data Exchange Format
 
